edge/k8s/infra/minio-ingress/service-console.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-console
spec:
  ports:
    - name: http
      port: 9001
      targetPort: 9001
