edge/k8s/infra/minio-ingress/service-s3.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-s3
spec:
  ports:
    - name: http
      port: 9000
      targetPort: 9000
